k8s/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tierlist-virtualservice
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - tierlist-gateway
  http:
  - match:
    - uri:
        prefix: /api/tierlists
    route:
    - destination:
        host: tierlist-backend-service
        port:
          number: 3001
  - match:
    - uri:
        prefix: /api/stats
    route:
    - destination:
        host: stats-service
        port:
          number: 3002
